--- a/obsidian.css
+++ b/obsidian.css
@@ -6,7 +6,7 @@
 * Name: Spectrum 
 * Licence: MIT 
 * GitHub Repo: https://github.com/Braweria/Spectrum 
-* Version: 0.15.3
+* Version: 0.15.4
 
 ! CONTENT
 *.............1. Variables
@@ -168,6 +168,10 @@ a {
 
 .cm-s-obsidian span.cm-url,
 .cm-s-obsidian span.cm-formatting-link.cm-link {
+  color: var(--external-link);
+}
+
+span.cm-formatting.cm-url + span.cm-url {
   color: var(--external-link-hidden);
 }
 
